[package]
name = "rk3399-rs"
version = "0.1.1"
edition = "2021"
description = "Rust crate containing structures for the register maps of the RK3399 SoC"
license = "MIT"
readme = "README.md"
keywords = ["rk3399", "rockchip", "svd", "peripheral", "embedded"]
categories = ["embedded", "hardware-support", "no-std", "no-std::no-alloc", "data-structures"]
repository = "https://github.com/CaptainIRS/rk3399-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vcell = "0.1.0"
