[package]
name = "rk3399-pac"
version = "0.1.2"
edition = "2021"
description = "Peripheral Access Crate (PAC) for the RK3399 SoC from Rockchip"
license = "MIT"
readme = "README.md"
keywords = ["rk3399", "rockchip", "peripheral", "embedded", "pac"]
categories = ["embedded", "hardware-support", "no-std", "no-std::no-alloc", "data-structures"]
repository = "https://github.com/CaptainIRS/rk3399-pac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portable-atomic = "0.3.16"
vcell = "0.1.0"

